# uclv_aipr_meca500_sim

./: CMakeLists.txt  package.xml
launch/: sim.launch.py  sim.rviz
urdf/: meca_500_r3.urdf.xacro
