<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uclv_aipr_meca500_sim</name>
  <version>1.0.1</version>
  <description>urdf mecademic</description>
  <maintainer email="marco.costanzo@unicampania.it">Marco Costanzo</maintainer>

  <author email="marco.costanzo@unicampania.it">Marco Costanzo</author>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
